pagina de metal

--- a/bandas-rock.html
+++ b/bandas-rock.html
@@ -59,7 +59,7 @@
                 <p>Pink Floyd es una banda de rock inglesa formada en Londres en 1965. Ganó seguidores desde el
                     principio como uno de los primeros grupos psicodélicos británicos y se distinguió por sus
                     composiciones extensas, experimentos sonoros, l
-                    etras filosóficas y elaborados shows en vivo. <br><span>Album Recomendado: The Wall</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/bd3o2EChZxGdaZip7">Album</a></span></p>
+                    etras filosóficas y elaborados shows en vivo. <br><span>Album Recomendado: The Wall</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/bd3o2EChZxGdaZip7"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Pink Floyd</h1>
             </div>
             <br>
@@ -75,7 +75,7 @@
                     vestuario, el grupo se dio a conocer al público a mediados de los años 1970 gracias a sus
                     actuaciones en directo, en las que incluían pirotecnia,
                     llamaradas, cañones, baterías elevadoras, guitarras con humo y sangre falsa. <br><span>Album
-                        Recomendado: Creatures of the Night</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/aMFaY69xy3fH7ZNZ6">Album</a></span></p>
+                        Recomendado: Creatures of the Night</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/aMFaY69xy3fH7ZNZ6"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Kiss</h1>
             </div>
             <br>
@@ -86,7 +86,7 @@
             <div class="band-info">
                 <img src="./img/acdc.jpg" alt="AC/DC">
                 <p>AC/DC es una banda de rock australiana formada en 1973. Fue fundada por los hermanos Malcolm Young 
-                    en la guitarra rítmica y Angus Young en la guitarra principal. <br><span>Album Recomendado: Highway to Hell</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/W5zQWkxs6pKNjBuk8">Album</a></span></p>
+                    en la guitarra rítmica y Angus Young en la guitarra principal. <br><span>Album Recomendado: Highway to Hell</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/W5zQWkxs6pKNjBuk8"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>AC/DC</h1>
             </div>
             <br>
@@ -101,7 +101,7 @@
                     Deacon (bajo). Sus primeros trabajos estuvieron influenciados por el rock progresivo , el hard rock
                     y el heavy metal , pero la banda gradualmente se aventuró en trabajos más convencionales y
                     radiofónicos al incorporar otros estilos, como el rock de estadio y el pop rock. <br><span>Album
-                        Recomendado: At night at the opera</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/4DRARiLcZdfCLgKS9">Album</a></span></p>
+                        Recomendado: At night at the opera</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/4DRARiLcZdfCLgKS9"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Queen</h1>
             </div>
             <br>
@@ -114,7 +114,7 @@
                     Robert Plant, Jimmy Page, John Paul Jones y John Bonham. Con un sonido pesado, impulsado por la
                     guitarra, Led Zeppelin se nutrió de influencias que incluían el blues y la música folk,
                     y se los cita como progenitores del hard rock y el heavy metal. <br><span>Album Recomendado: Led
-                        Zepellin IV</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/ebmbWzrf4TcCBsQe7">Album</a></span></p>
+                        Zepellin IV</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/ebmbWzrf4TcCBsQe7"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Led Zeppelin</h1>
             </div>
             <br>
@@ -182,7 +182,7 @@
             <i class="fab fa-facebook"><a href="#">Facebook</a></i>
             <i class="fab fa-twitter"><a href="#">Twitter</a></i>
             <i class="fab fa-instagram"><a href="#">Instagram</a></i>
-            <i class="fa-brands fa-linkedin">Linkedin</i>
+            <i class="fa-brands fa-linkedin"><a href="#">Linkedin</a></i>
         </footer>
 
 </body>
