--- a/discografias/discografia-lamb.html
+++ b/discografias/discografia-lamb.html
@@ -184,12 +184,13 @@
     <div class="pie-pagina">
         <footer>
             <p>Nuestra pagina web, sugerencias de albumes, bandas y mas</p>
+            <p>Contactanos: <a href="#">sugbandas@gmail.com</a></p>
             <h4>Developer: Nicolas &copy;2024</h4>
             <!--- ICONOS --->
             <i class="fab fa-facebook"><a href="#">Facebook</a></i>
             <i class="fab fa-twitter"><a href="#">Twitter</a></i>
             <i class="fab fa-instagram"><a href="#">Instagram</a></i>
-            <i class="fa-brands fa-linkedin">Linkedin</i>
+            <i class="fa-brands fa-linkedin"><a href="#">Linkedin</a></i>
         </footer>
     </div>
 </body>
