--- a/discografias/discografia-metallica.html
+++ b/discografias/discografia-metallica.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--- CSS FILE --->
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shorcut icon" href="../img/maloik.png">
     <!--- KIT DE ICONOS FONT AWESOME --->
@@ -28,7 +29,7 @@
                         <li><a href="discografia-death.html">Death</a></li>
                         <li><a href="discografia-slipknot.html">Slipknot</a></li>
                         <li><a href="discografia-lamb.html">Lamb of God</a></li>
-                        <li><a href="./discografias/discografia-pantera.html">Pantera</a></li>
+                        <li><a href="discografia-pantera.html">Pantera</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
@@ -198,12 +199,14 @@
    <div class="pie-pagina">
     <footer>
         <p>Nuestra pagina web, sugerencias de albumes, bandas y mas</p>
+        <p>Contactanos: <a href="#">sugbandas@gmail.com</a></p>
+        <p>Contactanos: <a href="#">sugbandas@gmail.com</a></p>
         <h4>Developer: Nicolas &copy;2024</h4>
         <!--- ICONOS --->
         <i class="fab fa-facebook"><a href="#">Facebook</a></i>
         <i class="fab fa-twitter"><a href="#">Twitter</a></i>
         <i class="fab fa-instagram"><a href="#">Instagram</a></i>
-        <i class="fa-brands fa-linkedin">Linkedin</i>
+        <i class="fa-brands fa-linkedin"><a href="#">Linkedin</a></i>
     </footer>
 </div>
 </body>
