--- a/recomendaciones/death-metal.html
+++ b/recomendaciones/death-metal.html
@@ -61,7 +61,7 @@
                     varios cambios de formación, dejando al guitarrista Bill Steer y al bajista y vocalista Jeff Walker
                     como los únicos miembros constantes.
                     Se separaron en 1996, pero se reformaron en 2007 sin el baterista original Ken Owen, por razones de
-                    salud <br><span>Album Recomendado: HeartWork</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/8CM7hv2Bsr3NN4ih8">Album</a></span></p>
+                    salud <br><span>Album Recomendado: HeartWork</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/8CM7hv2Bsr3NN4ih8"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Carcass</h1>
             </div>
             <br>
@@ -76,7 +76,7 @@
             <p>Children of Bodom fue una banda finlandesa de death metal melódico de Espoo. Formada en 1993 como
                 Inearthed, la formación final del grupo tras su separación en 2019 estaba compuesta por el líder Alexi
                 Laiho, el baterista Jaska Raatikainen, el bajista Henkka Seppälä,
-                el tecladista Janne Wirman y el guitarrista rítmico Daniel Freyberg. <br><span>Album Recomendado: Hate Crew Deathroll</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/bzFd5payYjTeaLD36">Album</a></span></p>
+                el tecladista Janne Wirman y el guitarrista rítmico Daniel Freyberg. <br><span>Album Recomendado: Hate Crew Deathroll</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/bzFd5payYjTeaLD36"><i class="fa-brands fa-spotify"></i></a></span></p>
             <h1>Cildren of Bodom</h1>
         </div>
         <br>
@@ -90,7 +90,7 @@
             <p>In Flames es una banda sueca de heavy metal, formada por el guitarrista Jesper Strömblad en Gotemburgo en
                 1990. Su formación ha cambiado varias veces,
                 siendo el vocalista Anders Fridén y el guitarrista Björn Gelotte los únicos miembros constantes desde
-                1995. <br><span>Album Recomendado: Sounds of a Playground Fading</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/XRKKAayFdhRUMhXH9">Album</a></span></p>
+                1995. <br><span>Album Recomendado: Sounds of a Playground Fading</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/XRKKAayFdhRUMhXH9"><i class="fa-brands fa-spotify"></i></a></span></p>
             <h1>In Flames</h1>
         </div>
         <br>
@@ -104,7 +104,7 @@
             <p>Nile es una banda estadounidense de death metal de Greenville, Carolina del Sur, formada en 1993. La
                 formación actual de la banda está formada por el miembro fundador Karl Sanders,
                 George Kollias, Brian Kingsland, Dan Vadim Von y Zach Jeter. <br><span>Album Recomendado: Amongst the
-                    Catacombs of Nephren-Ka</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/ZevQmUviHz5zbqUJ9">Album</a></span></p>
+                    Catacombs of Nephren-Ka</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/ZevQmUviHz5zbqUJ9"><i class="fa-brands fa-spotify"></i></a></span></p>
             <h1>Nile</h1>
         </div>
         <br>
@@ -118,7 +118,7 @@
             <p>Dying Fetus es una banda estadounidense de death metal de Greater Upper Marlboro, Maryland,
                 formada en 1991. Varios cambios en la formación a lo largo de los años han dejado a John Gallagher como
                 el único miembro original restante, así como la fuerza impulsora de la banda. <br><span>Album
-                    Recomendado: Killing on Adrenaline</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/jZ8wSsQPgCdtJYzE7">Album</a></span></p>
+                    Recomendado: Killing on Adrenaline</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/jZ8wSsQPgCdtJYzE7"><i class="fa-brands fa-spotify"></i></a></span></p>
             <h1>Dying Fetus</h1>
         </div>
         <br>
@@ -145,7 +145,7 @@
             <i class="fab fa-facebook"><a href="#">Facebook</a></i>
             <i class="fab fa-twitter"><a href="#">Twitter</a></i>
             <i class="fab fa-instagram"><a href="#">Instagram</a></i>
-            <i class="fa-brands fa-linkedin">Linkedin</i>
+            <i class="fa-brands fa-linkedin"><a href="#">Linkedin</a></i>
         </footer>
     </div>
 </body>
