--- a/recomendaciones/metal-aleman.html
+++ b/recomendaciones/metal-aleman.html
@@ -60,7 +60,7 @@
                 <p>Helloween es una banda alemana de power metal fundada en 1984 en Hamburgo por miembros de las bandas
                     Iron Fist, Gentry, Second Hell y Powerfool.
                     Se dice que la banda es una de las bandas de heavy metal europeas más influyentes de la década de
-                    1980 <br><span>Canción Recomendada: Eagle Fly Free</span> <br><span>Escuchar el album completo aqui! > <a href="https://deezer.page.link/fT8AeYzP2Yj3ad377">Album</a></span></p>
+                    1980 <br><span>Canción Recomendada: Eagle Fly Free</span> <br><span>Escuchar el album completo aqui! > <a href="https://deezer.page.link/fT8AeYzP2Yj3ad377"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Helloween</h1>
             </div>
             <br>
@@ -73,7 +73,7 @@
                 <p>Kreator es una banda alemana de thrash metal de Essen, formada en 1982. Su formación actual está
                     formada por el vocalista y guitarrista rítmico Miland "Mille" Petrozza,
                     el baterista Jürgen "Ventor" Reil, el guitarrista principal Sami Yli-Sirniö y el bajista Frédéric
-                    Leclercq. <br><span>Canción Recomendada: Satan is Real</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/k5y4xupARph9MDpX9">Album</a></span></p>
+                    Leclercq. <br><span>Canción Recomendada: Satan is Real</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/k5y4xupARph9MDpX9"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Kreator</h1>
             </div>
             <br>
@@ -87,7 +87,7 @@
                     Schenker. La formación de 1978 a 1992 fue la encarnación más exitosa del grupo e incluía a Klaus
                     Meine,
                     Rudolf Schenker, Matthias Jabs, Francis Buchholz y Herman Rarebell. <br><span>Canción Recomendada:
-                        Wind of Change</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/cSceHsg1iRo9YLYF9">Album</a></span></p>
+                        Wind of Change</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/cSceHsg1iRo9YLYF9"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Scorpions</h1>
             </div>
             <br>
@@ -100,7 +100,7 @@
                 <p>Accept es una banda alemana de heavy metal de Solingen, formada en 1976 por el guitarrista Wolf
                     Hoffmann, el cantante Udo Dirkschneider y el bajista Peter Baltes. Sus inicios se remontan a finales
                     de los años 60,
-                    cuando la banda comenzó a tocar con el nombre de Band X. <br><span>Canción Recomendada: Shadow Soldiers</span> <br><span>Escuchar album completo aqui! > <a href=https://deezer.page.link/GJyxcp5kF4Hwmtdw8>Album</a></span></p>
+                    cuando la banda comenzó a tocar con el nombre de Band X. <br><span>Canción Recomendada: Shadow Soldiers</span> <br><span>Escuchar album completo aqui! > <a href=https://deezer.page.link/GJyxcp5kF4Hwmtdw8><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Accept</h1>
             </div>
             <br>
@@ -126,7 +126,7 @@
             <i class="fab fa-facebook"><a href="#">Facebook</a></i>
             <i class="fab fa-twitter"><a href="#">Twitter</a></i>
             <i class="fab fa-instagram"><a href="#">Instagram</a></i>
-            <i class="fa-brands fa-linkedin">Linkedin</i>
+            <i class="fa-brands fa-linkedin"><a href="#">Linkedin</a></i>
         </footer>
     </div>
 </body>
