--- a/recomendaciones/metal-español.html
+++ b/recomendaciones/metal-español.html
@@ -59,7 +59,7 @@
             <div class="band-info">
                 <img src="../img/magodeoz.jpg" alt="Mago de Oz">
                 <p>Mägo de Oz es una banda de folk metal española de Begoña, Madrid, formada a mediados de 1988 por el baterista Txus di Fellatio. La banda se hizo famosa por el fuerte aire celta de su música, 
-                    reforzado por el uso constante de un violinista y un flautista <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/34nsZ2Wfz1pftA398">Album</a></span></p>
+                    reforzado por el uso constante de un violinista y un flautista <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/34nsZ2Wfz1pftA398"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Mago de Oz</h1>
             </div>
             <br>
@@ -69,7 +69,7 @@
             <div class="band-info">
                 <img src="../img/ratablanca.jpg" alt="Rata Blanca">
                 <p>El guitarrista Walter Giardino reemplazó a Osvaldo Civile en V8 por un corto tiempo, y abandonó la banda cuando sus canciones fueron rechazadas. Su amigo Roberto Cosseddu, bajista de Kamikaze , lo ayudó a grabar un demo con esas canciones. El baterista Gustavo Rowek , 
-                    quien también había dejado V8 poco tiempo antes, declinó sus proyectos con Civile y se unió a Giardino. <br><span>Escuchar el album completo aqui! > <a href="https://deezer.page.link/rX6i8KoA9HHcxCs47">Album</a></span></p>
+                    quien también había dejado V8 poco tiempo antes, declinó sus proyectos con Civile y se unió a Giardino. <br><span>Escuchar el album completo aqui! > <a href="https://deezer.page.link/rX6i8KoA9HHcxCs47"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Rata Blanca</h1>
             </div>
             <br>
@@ -79,7 +79,7 @@
             <div class="band-info">
                 <img src="../img/kraken.jpg" alt="Kraken">
                 <p>Kraken es una banda de rock fundada en Medellín, Colombia, en 1983. La formación actual está formada por Roxana Restrepo, Andrés Leiva, Ricardo Wolff, Julián Puerto, Luis Alberto Ramírez y Rubén Gelvez. 
-                    El sonido de la banda se caracteriza por una mezcla de hard rock y heavy metal. <br><span>Escuchar el album completo aqui! > <a href="https://deezer.page.link/KNrBJE9idhrqKh818">Album</a></span></p>
+                    El sonido de la banda se caracteriza por una mezcla de hard rock y heavy metal. <br><span>Escuchar el album completo aqui! > <a href="https://deezer.page.link/KNrBJE9idhrqKh818"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Kraken</h1>
             </div>
             <br>
@@ -90,7 +90,7 @@
             <div class="band-info">
                 <img src="../img/saratoga.jpg" alt="Saratoga">
                 <p>Saratoga es una banda española de heavy metal fundada en Madrid en 1992 por el bajista Niko del Hierro y el guitarrista Jero Ramiro. Desde marzo de 2023, la formación de la banda está formada por del Hierro, Ramiro, 
-                    Tete Novoa y Arnau Martí. La banda alcanzó su mayor éxito durante el mandato del vocalista Leo Jiménez. <br><span>Escuchar el album completo aqui! <a href="https://deezer.page.link/hetteKqBxoBTeewY8">Album</a></span></p>
+                    Tete Novoa y Arnau Martí. La banda alcanzó su mayor éxito durante el mandato del vocalista Leo Jiménez. <br><span>Escuchar el album completo aqui! <a href="https://deezer.page.link/hetteKqBxoBTeewY8"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Saratoga</h1>
             </div>
             <br>
@@ -100,7 +100,7 @@
             <div class="band-info">
                 <img src="../img/tierra santa.jpg" alt="Tierra Santa">
                 <p>Tierra Santa es una banda española de heavy metal de La Rioja, España. La banda fue formada en 1997 por Ángel, Arturo, Roberto, Iñaki y Tomy, y la banda lanzó su álbum debut Medieval ese mismo año, 
-                    girando con Dio como acto de apertura en la gira española de la banda estadounidense. <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/2TCZk7CQhujF9zuZ6">Albuh1</a></span></p>
+                    girando con Dio como acto de apertura en la gira española de la banda estadounidense. <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/2TCZk7CQhujF9zuZ6"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Tierra Santa</h1>
             </div>
             <br>
@@ -121,7 +121,7 @@
             <i class="fab fa-facebook"><a href="#">Facebook</a></i>
             <i class="fab fa-twitter"><a href="#">Twitter</a></i>
             <i class="fab fa-instagram"><a href="#">Instagram</a></i>
-            <i class="fa-brands fa-linkedin">Linkedin</i>
+            <i class="fa-brands fa-linkedin"><a href="#">Linkedin</a></i>
         </footer>
 </body>
 </html>
