--- a/recomendaciones/trash-metal.html
+++ b/recomendaciones/trash-metal.html
@@ -75,7 +75,7 @@
                 <p>Overkill es una banda estadounidense de thrash metal formada en 1980 en Nueva Jersey. Han pasado por
                     muchos cambios de formación,
                     dejando al bajista DD Verni y al vocalista Bobby "Blitz" Ellsworth como los únicos miembros
-                    constantes <br><span>Album Recomendado: The Years of Decay</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/BkRY7ZfzKH9mVSr49">Album</a></span></p>
+                    constantes <br><span>Album Recomendado: The Years of Decay</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/BkRY7ZfzKH9mVSr49"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Overkill</h1>
             </div>
             <br>
@@ -89,7 +89,7 @@
                 <p>Exodus es una banda estadounidense de thrash metal formada en 1979 en Richmond, California. Su
                     formación actual está formada por los guitarristas Gary Holt y Lee Altus, el bajista Jack Gibson,
                     el baterista Tom Hunting y el vocalista principal Steve "Zetro" Souza. <br><span>Album Recomendado:
-                        Tempo of the Damned</span> <br><span>Escuchar album completo aqui! <a href="https://deezer.page.link/nAC94UCY9GtYgqG79">Album</a></span></p>
+                        Tempo of the Damned</span> <br><span>Escuchar album completo aqui! <a href="https://deezer.page.link/nAC94UCY9GtYgqG79"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Exodus</h1>
             </div>
             <br>
@@ -104,7 +104,7 @@
                     nombre de Legacy, la formación actual de la banda está compuesta por el guitarrista rítmico Eric
                     Peterson, el vocalista principal Chuck Billy,
                     el guitarrista principal Alex Skolnick, el bajista Steve Di Giorgio y el baterista Chris Dovas.
-                    <br><span>Album Recomendado: The Formation of Damnation</span> <br><span>Escuchar album completo aqui! > <a href=https://deezer.page.link/VauFRwiT7HoyYGy57>Album</a></span> <br><span>Te puede interesar la discografia > <a href="../discografias/discografia-testament.html">Discografia</a></span></p>
+                    <br><span>Album Recomendado: The Formation of Damnation</span> <br><span>Escuchar album completo aqui! > <a href=https://deezer.page.link/VauFRwiT7HoyYGy57><i class="fa-brands fa-spotify"></i></a></span> <br><span>Te puede interesar la discografia > <a href="../discografias/discografia-testament.html">Discografia</a></span></p>
                 <h1>Testament</h1>
             </div>
             <br>
@@ -118,7 +118,7 @@
                 <p>Havok es una banda estadounidense de thrash metal de Denver, Colorado, formada en 2004. A partir de
                     2023, su formación actual está formada por el líder David Sanchez,
                     el baterista Pete Webber, el guitarrista principal Reece Scruggs y el bajista Nick Schendzielos. (No
-                    es una banda muy conocida, te recomiendo escucharla)<br><span>Album recomendado: Time is Up</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/FM6EDE6EKTKE9uLn9">Album</a></span></p>
+                    es una banda muy conocida, te recomiendo escucharla)<br><span>Album recomendado: Time is Up</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/FM6EDE6EKTKE9uLn9"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Havok</h1>
             </div>
             <br>
@@ -141,7 +141,7 @@
             <i class="fab fa-facebook"><a href="#">Facebook</a></i>
             <i class="fab fa-twitter"><a href="#">Twitter</a></i>
             <i class="fab fa-instagram"><a href="#">Instagram</a></i>
-            <i class="fa-brands fa-linkedin">Linkedin</i>
+            <i class="fa-brands fa-linkedin"><a href="#">Linkedin</a></i>
         </footer>
 
 </body>
