--- a/albumes-odidados.html
+++ b/albumes-odidados.html
@@ -119,10 +119,10 @@
             <h4>Developer: Nicolas &copy;2024</h4>
             <p>Contactanos: <a href="#">sugbandas@gmail.com</a></p>
             <!--- ICONOS --->
-            <i class="fab fa-facebook"><a href="">Faceook</a></i>
-            <i class="fab fa-twitter"><a href="">Twitter</a></i>
-            <i class="fab fa-instagram"><a href="">Instagram</a></i>
-            <i class="fa-brands fa-linkedin">Linkedin</i>
+            <i class="fab fa-facebook"><a href="#">Faceook</a></i>
+            <i class="fab fa-twitter"><a href="#">Twitter</a></i>
+            <i class="fab fa-instagram"><a href="#">Instagram</a></i>
+            <i class="fa-brands fa-linkedin"><a href="#">Linkedin</a></i>
         </footer>
 
 </body>
