--- a/albumes.html
+++ b/albumes.html
@@ -58,7 +58,7 @@
             <div class="band-info">
                 <img src="albums/once.jpg" alt="Deicide">
                 <p>Traducción del inglés-Once upon the Cross es el tercer álbum de estudio de la banda estadounidense de death metal Deicide. Fue lanzado el 17 de abril de 1995 por Roadrunner Records. Las muestras al comienzo del tema inicial "Once upon the Cross" y 
-                    "Trick or Betrayed" están tomadas de la película La última tentación de Cristo <br><span>Escuchar completo aqui! > <a href="https://deezer.page.link/8RiyKiDLq9TYCQiM7">Album</a></span></p>
+                    "Trick or Betrayed" están tomadas de la película La última tentación de Cristo <br><span>Escuchar completo aqui! > <a href="https://deezer.page.link/8RiyKiDLq9TYCQiM7"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <a href="https://open.spotify.com/album/0ZfJEIY1iOasgnt67JleR7?autoplay=false"><h1>Once Upon The Cross</h1></a>
             </div>
             <br>
@@ -68,7 +68,7 @@
             <div class="band-info">
                 <img src="albums/rust.jpg" alt="Megadeth">
                 <p>Rust in Peace —en español: Oxídate en paz— es el cuarto álbum de estudio de la banda estadounidense de thrash metal Megadeth, 
-                    publicado por la compañía discográfica Capitol Records el 24 de septiembre de 1990 <br><span>Escuchar completo aqui! > <a href="https://deezer.page.link/VioiToKDkCpwWG3K8">Album</a></span></p>
+                    publicado por la compañía discográfica Capitol Records el 24 de septiembre de 1990 <br><span>Escuchar completo aqui! > <a href="https://deezer.page.link/VioiToKDkCpwWG3K8"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <a href="https://open.spotify.com/album/0qaLL09EtF1hiUis7PRvaJ?autoplay=false"><h1>Rust In Peace</h1></a>
             </div>
             <br>
@@ -78,7 +78,7 @@
             <div class="band-info">
                 <img src="albums/mars.jpg" alt="Gojira">
                 <p>From Mars to Sirius es el tercer álbum de estudio de la banda francesa de death metal Gojira, 
-                    publicado el 27 de septiembre de 2005 por Listenable Records en Europa y por Prosthetic Records en América​ <br><span>Escuchar completo aqui! > <a href="https://deezer.page.link/gQGahaF7xQr3cUbG9">Album</a></span></p>
+                    publicado el 27 de septiembre de 2005 por Listenable Records en Europa y por Prosthetic Records en América​ <br><span>Escuchar completo aqui! > <a href="https://deezer.page.link/gQGahaF7xQr3cUbG9"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <a href="https://open.spotify.com/album/0AvFF0HlQYvYKHaRURGZBs?autoplay=false"> <h1>From Mars To Sirius</h1></a>
             </div>
             <br>
@@ -88,7 +88,7 @@
             <div class="band-info">
                 <img src="albums/ride.jpg" alt="Metallica">
                 <p>Ride the Lightning es el segundo álbum de estudio del grupo musical estadounidense Metallica. 
-                    Fue publicado el 27 de julio de 1984 bajo el sello discográfico Megaforce Records <br><span>Escuchar completo aqui! > <a href="https://deezer.page.link/GufSD2sfcyamvjMw6">Album</a></span></p>
+                    Fue publicado el 27 de julio de 1984 bajo el sello discográfico Megaforce Records <br><span>Escuchar completo aqui! > <a href="https://deezer.page.link/GufSD2sfcyamvjMw6"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <a href="https://open.spotify.com/album/2omIeSJEGQeKHPOpiXgfkr?autoplay=false"><h1>Ride the Lightning</h1></a>
             </div>
             <br>
@@ -98,7 +98,7 @@
             <div class="band-info">
                 <img src="albums/iowa.jpg" alt="">
                 <p>Iowa es el segundo álbum de estudio de la banda estadounidense de metal alternativo Slipknot, lanzado a través de Roadrunner Records el 28 de agosto de 2001. 
-                    La producción corrió a cargo de Ross Robinson y la misma banda <br><span>Escuchar completo aqui! > <a href="https://deezer.page.link/B338bz27tj4cwU2D9">Album</a></span></p>
+                    La producción corrió a cargo de Ross Robinson y la misma banda <br><span>Escuchar completo aqui! > <a href="https://deezer.page.link/B338bz27tj4cwU2D9"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <a href="https://open.spotify.com/album/7yQmrL4bms0JIWamjA2ok1?autoplay=false"><h1>Iowa</h1></a>
             </div>
             <br>
@@ -124,7 +124,7 @@
             <i class="fab fa-facebook"><a href="#">Facebook</a></i>
             <i class="fab fa-twitter"><a href="#">Twitter</a></i>
             <i class="fab fa-instagram"><a href="#">Instagram</a></i>
-            <i class="fa-brands fa-linkedin">Linkedin</i>
+            <i class="fa-brands fa-linkedin"><a href="">Linkedin</a></i>
         </footer>
 
 </body> 
