--- a/discografias/discografia-slayer.html
+++ b/discografias/discografia-slayer.html
@@ -65,7 +65,7 @@
                     La banda autofinanció su debut de larga duración, combinando los ahorros del vocalista Tom Araya, 
                     que trabajaba como terapeuta respiratorio , y el dinero prestado por el padre del guitarrista Kerry King. 
                     La banda realizó una gira extensa para promocionar el álbum, y llevó a amigos cercanos y familiares a lo largo del viaje, 
-                    quienes ayudaron detrás del escenario con la iluminación y el sonido. <br><span>Nombre del album: Show No Mercy</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/LG9EvB56vyp6DKKN6">Album</a></span></p>
+                    quienes ayudaron detrás del escenario con la iluminación y el sonido. <br><span>Nombre del album: Show No Mercy</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/LG9EvB56vyp6DKKN6"><i class="fa-brands fa-spotify"></i></a></span></p>
 
                     <h1>Show no Mercy</h1>
             </div>
@@ -77,7 +77,7 @@
                     lanzado el 8 de abril de 1985 por Metal Blade Records. 
                     El debut de la banda en 1983, Show No Mercy, se convirtió en el lanzamiento más vendido de Metal Blade Records y, 
                     como resultado, el productor Brian Slagel deseaba lanzar un segundo álbum de Slayer. Con ese fin, Slagel financió un presupuesto de grabación ( Show No Mercy fue pagado por los miembros de la banda) 
-                    y reclutó a varios productores experimentados para ayudar en el estudio. <br><span>Nombre del album: Hell Awaits</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/z1fAQN7uVyAZJrt28">Album</a></span></p>
+                    y reclutó a varios productores experimentados para ayudar en el estudio. <br><span>Nombre del album: Hell Awaits</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/z1fAQN7uVyAZJrt28"><i class="fa-brands fa-spotify"></i></a></span></p>
 
                     <h1>Hell Awaits</h1>
             </div>
@@ -90,7 +90,7 @@
                     El álbum fue la primera colaboración de la banda con el productor Rick Rubin, 
                     cuyo aporte ayudó a que el sonido de la banda evolucionara. 
                     La fecha de lanzamiento del álbum se retrasó debido a las preocupaciones con respecto al tema lírico de la canción de apertura « Angel of Death », que se refiere a Josef Mengele y describe actos como la experimentación humana que cometió en el campo de concentración de Auschwitz. 
-                    Los miembros de la banda declararon que no toleraban el nazismo y que simplemente estaban interesados en el tema. <br><span>Nombre  del album: Reign in blood</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/cpPRVkWkgnqngp4s8">Album</a></span></p>
+                    Los miembros de la banda declararon que no toleraban el nazismo y que simplemente estaban interesados en el tema. <br><span>Nombre  del album: Reign in blood</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/cpPRVkWkgnqngp4s8"><i class="fa-brands fa-spotify"></i></a></span></p>
 
                     <h1>Reign in blood</h1>
             </div>
@@ -103,7 +103,7 @@
                     El álbum fue la segunda colaboración de la banda con el productor Rick Rubin, 
                     cuyas habilidades de producción en su álbum anterior Reign in Blood (1986) habían ayudado a que su sonido evolucionara. 
                     Dado el ritmo frenético de Reign in Blood , Slayer no hizo ningún intento de superarlo en South of Heaven ; más bien, la banda compensó y complementó Reign in Blood al reducir deliberadamente el tempo en South of Heaven, 
-                    así como al utilizar guitarras sin distorsión y voces atenuadas. <br><span>Nombre del albu: South of Heaven</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/Rpp3X68VGXddbfm89">Album</a></span></p>
+                    así como al utilizar guitarras sin distorsión y voces atenuadas. <br><span>Nombre del albu: South of Heaven</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/Rpp3X68VGXddbfm89"><i class="fa-brands fa-spotify"></i></a></span></p>
 
                     <h1>South of Heaven</h1>
             </div>
@@ -114,7 +114,7 @@
                 <p>Seasons in the Abyss es el quinto álbum de estudio de la banda estadounidense de thrash metal Slayer, 
                     lanzado el 9 de octubre de 1990 a través de Def American Records. 
                     Las sesiones de grabación comenzaron en marzo de 1990 en Hit City West y Hollywood Sound, y finalizaron en junio de 1990 en The Record Plant en Los Ángeles, California. Fue el último álbum de la banda en presentar su formación original completa con el baterista Dave Lombardo hasta su regreso en el álbum de la banda de 2006 Christ Illusion. El estilo musical de Seasons in the Abyss ha sido comparado por los críticos con los dos álbumes anteriores de la banda, 
-                    South of Heaven (1988) y Reign in Blood (1986). <br><span>Nombre del album: Sesons in the abyss</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/cs79DQpPCFiANjko7">Album</a></span></p>
+                    South of Heaven (1988) y Reign in Blood (1986). <br><span>Nombre del album: Sesons in the abyss</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/cs79DQpPCFiANjko7"><i class="fa-brands fa-spotify"></i></a></span></p>
 
                     <h1>Sesons in the abyss</h1>
             </div>
@@ -126,7 +126,7 @@
                     lanzado el 27 de septiembre de 1994 por American Recordings. 
                     La producción del álbum representó un desafío para el sello, 
                     ya que su situación de marketing generó discusiones sobre su explicitud; para darles tiempo para decidir sobre su estilo, la banda lanzó el álbum en vivo Decade of Aggression. Dado que fue lanzado casi cuatro años después de su predecesor Seasons in the Abyss (1990), 
-                    el vocalista Tom Araya dijo que se dedicó más tiempo a su producción en comparación con los álbumes anteriores de la banda. <br><span>Nombre del album: Divine Intervention</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/Ei7SjbPPPZ9gTTvu7">Album</a></span> </p>
+                    el vocalista Tom Araya dijo que se dedicó más tiempo a su producción en comparación con los álbumes anteriores de la banda. <br><span>Nombre del album: Divine Intervention</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/Ei7SjbPPPZ9gTTvu7"><i class="fa-brands fa-spotify"></i></a></span> </p>
 
                     <h1>Divine Intervention</h1>
             </div>
@@ -138,7 +138,7 @@
                     es el octavo álbum de estudio de la banda estadounidense de thrash metal Slayer, 
                     lanzado el 9 de junio de 1998 por American Recordings. El guitarrista Jeff Hanneman escribió la mayor parte del contenido del álbum, que ha sido descrito como el más experimental de Slayer. 
                     Fue el primer álbum de la banda en ser tocado principalmente en afinación C♯, 
-                    y lleva el nombre de un intervalo musical conocido por su disonancia. Los temas líricos explorados en el álbum incluyen religión, sexo, desviación cultural, muerte, locura, guerra y homicidio. <br><span>Nombre del album: Diablous in musica</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/tiUdppAt4WuUw4Co9">Album</a></span></p>
+                    y lleva el nombre de un intervalo musical conocido por su disonancia. Los temas líricos explorados en el álbum incluyen religión, sexo, desviación cultural, muerte, locura, guerra y homicidio. <br><span>Nombre del album: Diablous in musica</span> <br><span>Escucha el album completo aqui! > <a href="https://deezer.page.link/tiUdppAt4WuUw4Co9"><i class="fa-brands fa-spotify"></i></a></span></p>
 
                     <h1>Dialous in musica</h1>
             </div>
@@ -150,7 +150,7 @@
                     lanzado el 11 de septiembre de 2001 por American Recordings. 
                     Fue grabado durante tres meses en The Warehouse Studio en Vancouver e incluye la canción nominada al premio Grammy «Disciple». 
                     El guitarrista Kerry King escribió la mayoría de sus letras, adoptando un enfoque diferente a las grabaciones anteriores al explorar temas como la religión, el asesinato, la venganza y el autocontrol. Estilísticamente, el álbum muestra un regreso al sonido clásico de thrash metal de Slayer. 
-                    Fue el último álbum de Slayer en el que participó el baterista Paul Bostaph hasta su regreso en su álbum de 2015 Repentless. <br><span>Nombre del album: God Hate Us All</span> <br><span>Escucha el album completo aqui! > <a href="https://music.youtube.com/playlist?list=OLAK5uy_maRqaOHFR5id1uYyUJLB5wRPHOA5HMm9g&si=T0HI4EUH9y_nvKDA">Album</a></span></p>
+                    Fue el último álbum de Slayer en el que participó el baterista Paul Bostaph hasta su regreso en su álbum de 2015 Repentless. <br><span>Nombre del album: God Hate Us All</span> <br><span>Escucha el album completo aqui! > <a href="https://music.youtube.com/playlist?list=OLAK5uy_maRqaOHFR5id1uYyUJLB5wRPHOA5HMm9g&si=T0HI4EUH9y_nvKDA"><i class="fa-brands fa-spotify"></i></a></span></p>
 
                     <h1>God Hate Us All</h1>
             </div>
@@ -162,7 +162,7 @@
                     lanzado el 8 de agosto de 2006 por American Recordings. 
                     Fue el primer álbum de la banda con los cuatro miembros originales en casi dieciséis años. 
                     El baterista de Slayer, Dave Lombardo, 
-                    actuó con la banda por primera vez desde Seasons in the Abyss (1990). <br><span>Nombre del album: Chrits Illusion</span> <br><span>Escucha el album completo aqui! > <a href="https://music.youtube.com/playlist?list=OLAK5uy_mL5v_OZjtV5hHpJ6Fd1GeBKpzr-rWaTTA&si=fKw5qmCdDpmNJXOs">Album</a></span></p>
+                    actuó con la banda por primera vez desde Seasons in the Abyss (1990). <br><span>Nombre del album: Chrits Illusion</span> <br><span>Escucha el album completo aqui! > <a href="https://music.youtube.com/playlist?list=OLAK5uy_mL5v_OZjtV5hHpJ6Fd1GeBKpzr-rWaTTA&si=fKw5qmCdDpmNJXOs"><i class="fa-brands fa-spotify"></i></a></span></p>
 
                     <h1>Christ Illusion</h1>
             </div>
@@ -173,7 +173,7 @@
                 <p>World Painted Blood es el undécimo álbum de estudio dela banda estadounidense de thrash metal Slayer. 
                     Fue lanzado a través de American Recordings y Sony Music el 3 de noviembre de 2009 y fue producido por Greg Fidelman y producido ejecutivamente por Rick Rubin. 
                     Es el único álbum de la banda producido por Greg Fidelman y el último álbum que presenta la formación original de la banda, incluido el guitarrista Jeff Hanneman (quien murió de cirrosis hepática en 2013) y el baterista Dave Lombardo (quien fue despedido de Slayer el mismo año). Con mucha anticipación por el álbum después de Christ Illusion de 2006, 
-                    los miembros de Slayer comenzaron a revelar información sobre el álbum a principios de 2009. <br><span>Nombre del album: World Painted Blood</span> <br><span>Escucha el album completo aqui! > <a href="https://music.youtube.com/playlist?list=OLAK5uy_l2FTdMqHcVJ7jc4g9hRXRdAp77nCznqv4&si=xYDLW-akFe4s6j7C">Album</a></span></p>
+                    los miembros de Slayer comenzaron a revelar información sobre el álbum a principios de 2009. <br><span>Nombre del album: World Painted Blood</span> <br><span>Escucha el album completo aqui! > <a href="https://music.youtube.com/playlist?list=OLAK5uy_l2FTdMqHcVJ7jc4g9hRXRdAp77nCznqv4&si=xYDLW-akFe4s6j7C"><i class="fa-brands fa-spotify"></i></a></span></p>
 
                     <h1>World Painted Blood</h1>
             </div>
@@ -187,7 +187,7 @@
                     También es el primer álbum en el que aparece el baterista Paul Bostaph desde God Hates Us All (2001). 
                     Repentless es también el único álbum que la banda lanzó en Nuclear Blast y fue producido por Terry Date, 
                     reemplazando a Rick Rubin después de veintinueve años y nueve álbumes de estudio como su productor o productor ejecutivo. 
-                    La brecha de seis años entre World Painted Blood (2009) y Repentless también fue la más larga entre dos álbumes de Slayer en su carrera. <br><span>Nombre del album:Repentless</span> <br><span>Escucha el album completo aqui! > <a href="https://music.youtube.com/playlist?list=OLAK5uy_lXg5ZAzZSEI5eEm5YKIyjV2wLhKCX6qVc&si=plOqhgNSKlgXfHQI">Album</a></span></p>
+                    La brecha de seis años entre World Painted Blood (2009) y Repentless también fue la más larga entre dos álbumes de Slayer en su carrera. <br><span>Nombre del album:Repentless</span> <br><span>Escucha el album completo aqui! > <a href="https://music.youtube.com/playlist?list=OLAK5uy_lXg5ZAzZSEI5eEm5YKIyjV2wLhKCX6qVc&si=plOqhgNSKlgXfHQI"><i class="fa-brands fa-spotify"></i></a></span></p>
                     
                     <h1>Repentless</h1>
             </div>
@@ -201,12 +201,13 @@
    <div class="pie-pagina">
     <footer>
         <p>Nuestra pagina web, sugerencias de albumes, bandas y mas</p>
+        <p>Contactanos: <a href="#">sugbandas@gmail.com</a></p>
         <h4>Developer: Nicolas &copy;2024</h4>
         <!--- ICONOS --->
         <i class="fab fa-facebook"><a href="#">Facebook</a></i>
         <i class="fab fa-twitter"><a href="#">Twitter</a></i>
         <i class="fab fa-instagram"><a href="#">Instagram</a></i>
-        <i class="fa-brands fa-linkedin">Linkedin</i>
+        <i class="fa-brands fa-linkedin"><a href="#">Linkedin</a></i>
     </footer>
 </div>
 </body>
