--- a/discografias/discografia-slipknot.html
+++ b/discografias/discografia-slipknot.html
@@ -119,7 +119,8 @@
                     California con el coproductor Greg Fidelman (quien anteriormente produjo el álbum de 2014 de la banda .5: The Gray Chapter ), 
                     fue lanzado el 9 de agosto de 2019 por Roadrunner Records . El título está tomado de una letra de la canción « All Out Life », 
                     que fue lanzada como sencillo independiente en 2018 y aparece como pista adicional en la edición japonesa del álbum. We Are Not Your Kind es el único álbum de Slipknot grabado como una banda de ocho miembros, ya que su ex percusionista Chris Fehn fue despedido de la banda en marzo de 2019 después de demandar al grupo por supuestas regalías impagas.
-                     <br><span>Nombre del album: We Are Not Your Kinds</span> <br><span>Escucha el album completo aqui! > <a href="">Album</a></span></p>
+                     <br><span>Nombre del album: We Are Not Your Kinds</span> <br><span>Escucha el album completo aqui! > <a href=""><i class="fa-brands fa-spotify"></i>
+                     </a></span></p>
                     <h1>We Are Not Your Kind</h1>
             </div>
             <br>
@@ -151,12 +152,13 @@
    <div class="pie-pagina">
         <footer>
             <p>Nuestra pagina web, sugerencias de albumes, bandas y mas</p>
+            <p>Contactanos: <a href="#">sugbandas@gmail.com</a></p>
             <h4>Developer: Nicolas &copy;2024</h4>
             <!--- ICONOS --->
             <i class="fab fa-facebook"><a href="#">Facebook</a></i>
             <i class="fab fa-twitter"><a href="#">Twitter</a></i>
             <i class="fab fa-instagram"><a href="#">Instagram</a></i>
-            <i class="fab fa-youtube"><a href="#">Youtube</a></i>
+            <i class="fa-brands fa-linkedin"><a href="#">Linkedin</a></i>
         </footer>
     </div>
 </div>
