--- a/documentales/conciertos.html
+++ b/documentales/conciertos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <!--- KIT DE ICONOS FONT AWESOME --->
+    <script src="https://kit.fontawesome.com/d9947da715.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../img/maloik.png">
     <title>Festivales de metal</title>
 </head>
@@ -202,12 +204,13 @@
     <div class="pie-pagina">
         <footer>
             <p>Nuestra pagina web, sugerencias de albumes, bandas y mas</p>
+            <p>Contactanos: <a href="#">sugbandas@gmail.com</a></p>
             <h4>Developer: Nicolas &copy;2024</h4>
             <!--- ICONOS --->
             <i class="fab fa-facebook"><a href="#">Facebook</a></i>
             <i class="fab fa-twitter"><a href="#">Twitter</a></i>
             <i class="fab fa-instagram"><a href="#">Instagram</a></i>
-            <i class="fa-brands fa-linkedin">Linkedin</i>
+            <i class="fa-brands fa-linkedin"><a href="#">Linkedin</a></i>
         </footer>
     </div>
 </body>
