--- a/mas-albumes.html
+++ b/mas-albumes.html
@@ -57,7 +57,7 @@
             <div class="band-info">
                 <img src="./albums/Powerslave.jpg" alt="PowerSlave">
                 <p>Powerslave es el quinto álbum de estudio de la banda inglesa de heavy metal Iron Maiden, publicado el 3 de septiembre de 1984 a través de EMI Records en Europa y 
-                    su sello hermano Capitol Records en Norteamérica. Fue reeditado por Sanctuary y Columbia Records en los Estados Unidos en 2002. <br><span>Escuchar completo aqui! > <a href="https://deezer.page.link/qxSYqXCYjv2HzQ3c6">Album</a></span></p>
+                    su sello hermano Capitol Records en Norteamérica. Fue reeditado por Sanctuary y Columbia Records en los Estados Unidos en 2002. <br><span>Escuchar completo aqui! > <a href="https://deezer.page.link/qxSYqXCYjv2HzQ3c6"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Iron Maiden</h1>
             </div>
             <br>
@@ -67,7 +67,7 @@
             <div class="band-info">
                 <img src="./albums/VulgarDisplayofPower.jpg" alt="Vulgar Display of Power">
                 <p>Vulgar Display of Power es el sexto álbum de estudio de la banda estadounidense de heavy metal Pantera. Lanzado el 25 de febrero de 1992 a través de Atco Records, fue la segunda colaboración de la banda con el productor Terry Date, 
-                    después de haber trabajado con él en su exitoso álbum Cowboys from Hell. <br><span>Escuchar completo aqui! > <a href="https://deezer.page.link/jxUYpSbmgwx483C96">Album</a></span></p>
+                    después de haber trabajado con él en su exitoso álbum Cowboys from Hell. <br><span>Escuchar completo aqui! > <a href="https://deezer.page.link/jxUYpSbmgwx483C96"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Pantera</h1>
             </div>
             <br>
@@ -78,7 +78,7 @@
                 <img src="./albums/peacesells.jpg" alt="Peace Sells">
                 <p>Peace Sells... but Who's Buying? es el segundo álbum de estudio de la banda estadounidense de thrash metal Megadeth, 
                     lanzado el 19 de septiembre de 1986 a través de Capitol Records. El proyecto fue manejado originalmente por Combat Records, 
-                    lo que resultó en que la mezcla original del álbum fuera coproducida por Randy Burns. <br><span>Escuchar completo aqui! > <a href="https://deezer.page.link/W78yPEWDX76FmBca6">Album</a></span></p>
+                    lo que resultó en que la mezcla original del álbum fuera coproducida por Randy Burns. <br><span>Escuchar completo aqui! > <a href="https://deezer.page.link/W78yPEWDX76FmBca6"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Meagdeth</h1>
             </div>
             <br>
@@ -88,7 +88,7 @@
                 <img src="./albums/arise.jpg" alt="Arise">
                 <p>Arise es el cuarto álbum de estudio de la banda brasileña de heavy metal Sepultura, lanzado en 1991 por Roadrunner Records. Tras su lanzamiento, 
                     el álbum recibió excelentes críticas de revistas de heavy metal como Rock Hard, 
-                    Kerrang! y Metal Forces. Arise es considerado el mejor momento de Sepultura entre los fans de toda la vida. <br><span>Escuchar completo aqui! > <a href="https://deezer.page.link/nzHK13pPwXRSkmCU8">Album</a></span></p>
+                    Kerrang! y Metal Forces. Arise es considerado el mejor momento de Sepultura entre los fans de toda la vida. <br><span>Escuchar completo aqui! > <a href="https://deezer.page.link/nzHK13pPwXRSkmCU8"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Sepultura</h1>
             </div>
             <br>
@@ -97,7 +97,7 @@
             <div class="band-info">
                 <img src="./albums/paranoid.jpg" alt="Paranoid">
                 <p>Paranoid es el segundo álbum de estudio de la banda de rock inglesa Black Sabbath, 
-                    lanzado el 18 de septiembre de 1970 por Vertigo Records en el Reino Unido y el 7 de enero de 1971 por Warner Bros. Records en los Estados Unidos. <br><span>Escuchar completo aqui! > <a href="https://deezer.page.link/zzqoe9bnEiey9Xs38">Album</a></span></p>
+                    lanzado el 18 de septiembre de 1970 por Vertigo Records en el Reino Unido y el 7 de enero de 1971 por Warner Bros. Records en los Estados Unidos. <br><span>Escuchar completo aqui! > <a href="https://deezer.page.link/zzqoe9bnEiey9Xs38"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Black Sabbath</h1>
             </div>
             <br>
@@ -119,7 +119,7 @@
             <i class="fab fa-facebook"><a href="#">Facebook</a></i>
             <i class="fab fa-twitter"><a href="#">Twitter</a></i>
             <i class="fab fa-instagram"><a href="#">Instagram</a></i>
-            <i class="fa-brands fa-linkedin">Linkedin</i>
+            <i class="fa-brands fa-linkedin"><a href="">Linkedin</a></i>
         </footer>
 
 </body>
