--- a/playlist.html
+++ b/playlist.html
@@ -108,7 +108,7 @@
             <i class="fab fa-facebook"><a href="">Facebook</a></i>
             <i class="fab fa-twitter"><a href="">Twitter</a></i>
             <i class="fab fa-instagram"><a href="">Instagram</a></i>
-            <i class="fa-brands fa-linkedin">Linkedin</i>
+            <i class="fa-brands fa-linkedin"><a href="">Linkedin</a></i>
         </footer>
 
 </body>
