--- a/recomendaciones/black-metal.html
+++ b/recomendaciones/black-metal.html
@@ -55,7 +55,7 @@
             <div class="band-info">
                 <img src="../img/emperor.jpg" alt="Emperor">
                 <p>Emperor es una banda noruega de black metal formada en 1991, considerada muy influyente por los críticos y las bandas emergentes de black metal. El grupo se separó en 2001, pero se reunió de 2005 a 2007 para algunas fechas en festivales y breves giras por Estados Unidos, 
-                    y se reunió nusevamente entre 2013 y 2014. Emperor se reformó por tercera vez en 2016. <br><span>Album Recomendado: In the Nightside Eclipse</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/kaJkRN1NraHSsfTh9">Album</a></span></p>
+                    y se reunió nusevamente entre 2013 y 2014. Emperor se reformó por tercera vez en 2016. <br><span>Album Recomendado: In the Nightside Eclipse</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/kaJkRN1NraHSsfTh9"><i class="fa-brands fa-spotify"></i></a></span></p>
                     <h1>Emperor</h1>
             </div>
             <br>
@@ -66,7 +66,7 @@
         <div class="band-info">
             <img src="../img/bathory.jpg" alt="Bathory">
             <p>Bathory fue una banda sueca de black metal formada en Vällingby en marzo de 1983. Bautizada en honor a la condesa húngara Elizabeth Báthory, se la considera pionera del black metal y el viking metal. 
-                El libro Lords of Chaos describe los primeros cuatro álbumes de Bathory como "el modelo del black metal escandinavo". <br><span>Album Recomendado: Bathory - Self Titled</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/t5To3FTx12yi4sXR8">Album</a></span></p>
+                El libro Lords of Chaos describe los primeros cuatro álbumes de Bathory como "el modelo del black metal escandinavo". <br><span>Album Recomendado: Bathory - Self Titled</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/t5To3FTx12yi4sXR8"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Bathory</h1>
         </div>
         <br>
@@ -76,7 +76,7 @@
         <div class="band-info">
             <img src="../img/gorgoroth.jpg" alt="Gorgoroth">
             <p>Gorgoroth es una banda noruega de black metal con sede en Bergen. Fue formada en 1992 por el guitarrista Infernus, 
-                que es el único miembro original que queda, y ha publicado nueve álbumes de estudio <br><span>Album Recomendado: Antichrist</span> <br><span>Escuchar el album completo aqui! > <a href="https://deezer.page.link/wsRUBE8xHu8LnpQe6">Album</a></span></p>
+                que es el único miembro original que queda, y ha publicado nueve álbumes de estudio <br><span>Album Recomendado: Antichrist</span> <br><span>Escuchar el album completo aqui! > <a href="https://deezer.page.link/wsRUBE8xHu8LnpQe6"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Gorgoroth</h1>
         </div>
         <br>
@@ -86,7 +86,7 @@
         <div class="band-info">
             <img src="../img/Mayhem.jpg" alt="Mayhem">
             <p>Mayhem es una banda noruega de black metal formada en Langhus en 1984. 
-                Fueron uno de los fundadores de la escena noruega de black metal y su música ha influido fuertemente en el género <br><span>Album Recomendado: Daemon</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/8KL44CssT3Un7kPQ7">Album</a></span></p>
+                Fueron uno de los fundadores de la escena noruega de black metal y su música ha influido fuertemente en el género <br><span>Album Recomendado: Daemon</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/8KL44CssT3Un7kPQ7"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Mayhem</h1>
         </div>
         <br>
@@ -96,7 +96,7 @@
         <div class="band-info">
             <img src="../img/behemoth.jpg" alt="Behemoth">
             <p>Behemoth es una banda polaca de metal extremo de Gdansk, formada en 1991. 
-                Se considera que han jugado un papel importante en el establecimiento del underground del metal extremo polaco. <br><span>Album Recomendado: Demigod</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/GX5DkduWdEtiFmyo9">Album</a></span></p>
+                Se considera que han jugado un papel importante en el establecimiento del underground del metal extremo polaco. <br><span>Album Recomendado: Demigod</span> <br><span>Escuchar album completo aqui! > <a href="https://deezer.page.link/GX5DkduWdEtiFmyo9"><i class="fa-brands fa-spotify"></i></a></span></p>
                 <h1>Behemoth</h1>                
         </div>
         <br>
@@ -111,12 +111,13 @@
     <div class="pie-pagina">
         <footer>
             <p>Nuestra pagina web, sugerencias de albumes, bandas y mas</p>
+            <p>Contactanos: <a href="#">sugbandas@gmail.com</a></p>
             <h4>Developer: Nicolas &copy;2024</h4>
             <!--- ICONOS --->
             <i class="fab fa-facebook"><a href="#">Facebook</a></i>
             <i class="fab fa-twitter"><a href="#"></a>Twitter</i>
             <i class="fab fa-instagram"><a href="#"></a>Instagram</i>
-            <i class="fa-brands fa-linkedin">Linkedin</i>
+            <i class="fa-brands fa-linkedin"><a href="#">Linkedin</a></i>
         </footer>
     </div>
 </body>
