pagina de metal

--- a/albumes.html
+++ b/albumes.html
@@ -78,7 +78,9 @@
             <div class="band-info">
                 <img src="albums/mars.jpg" alt="Gojira">
                 <p>From Mars to Sirius es el tercer álbum de estudio de la banda francesa de death metal Gojira, 
-                    publicado el 27 de septiembre de 2005 por Listenable Records en Europa y por Prosthetic Records en América​ <br><span>Escuchar completo aqui! > <a href="https://deezer.page.link/gQGahaF7xQr3cUbG9"><i class="fa-brands fa-spotify"></i></a></span></p>
+                    publicado el 27 de septiembre de 2005 por Listenable Records en Europa y por Prosthetic Records en América​ <br><span>Escuchar completo aqui! > <a href="https://deezer.page.link/gQGahaF7xQr3cUbG9"><i class="fa-brands fa-spotify"></i></a></span>
+                    <br><span>Mas de gojira aqui! > <a href="./discografias/discografia-gojira.html">Más aqui!</a></span>
+                </p>
                     <a href="https://open.spotify.com/album/0AvFF0HlQYvYKHaRURGZBs?autoplay=false"> <h1>From Mars To Sirius</h1></a>
             </div>
             <br>
