--- a/index.html
+++ b/index.html
@@ -170,9 +170,7 @@
             <h1>Sugerencias de los usuarios</h1>
             <p>Estas son algunas sugerencias de los usuarios bandas de metal y albumes Si quieres saber mas <br><span><a
                         href="sugerencias.html">Vista el enlace</a></span></p>
-            <div class="division">
-                <h1>hola</h1>
-            </div>
+            <div class="division"></div>
             <h1>Fuente de información</h1>
             <p>Toda la fuente de información fue sacada de <span><a
                         href="https://es.wikipedia.org/wiki/Wikipedia:Portada">wikipedia</a></span></p>
