--- a/recomendaciones/black-metal.html
+++ b/recomendaciones/black-metal.html
@@ -115,8 +115,8 @@
             <h4>Developer: Nicolas &copy;2024</h4>
             <!--- ICONOS --->
             <i class="fab fa-facebook"><a href="#">Facebook</a></i>
-            <i class="fab fa-twitter"><a href="#"></a>Twitter</i>
-            <i class="fab fa-instagram"><a href="#"></a>Instagram</i>
+            <i class="fab fa-twitter"><a href="#">Twitter</a></i>
+            <i class="fab fa-instagram"><a href="#">Instagram</a></i>
             <i class="fa-brands fa-linkedin"><a href="#">Linkedin</a></i>
         </footer>
     </div>
