--- a/sugerencias.html
+++ b/sugerencias.html
@@ -142,7 +142,7 @@
         <br>
         <p class="text-comment">Deja aqui tu comentario</p>
         <textarea  class="comentario" cols="30" rows="10"></textarea>
-        <input type="submit" class="submit-comment" value="Comentar">
+        <button type="submit" class="submit-comment" value="Comentar">Comentar</button>
     </div>
 
     <!--- PIE PAGINA --->
